Reset cooldown when targets for test jobs change, irrespective of change